--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "flatpickr": "^4.6.13",
+    "pinia": "^2.1.7",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-service": "~5.0.0"
+    "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5"
   }
 }
